--- a/index.html
+++ b/index.html
@@ -8,14 +8,57 @@
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='filter1' x='0' y='0' width='100' height='100' filterUnits='userSpaceOnUse' primitiveUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeGaussianBlur stdDeviation='5.664063'/%3E%3CfeOffset dx='2.336994' dy='0.992622' result='offsetblur'/%3E%3CfeFlood flood-color='%23000000' flood-opacity='0.5'/%3E%3CfeComposite in2='offsetblur' operator='in'/%3E%3CfeMerge%3E%3CfeMergeNode/%3E%3CfeMergeNode in='SourceGraphic'/%3E%3C/feMerge%3E%3C/filter%3E%3Cpath id='Shape' fill='%23000000' fill-rule='evenodd' stroke='%23180019' stroke-width='0.976563' stroke-linecap='round' filter='url(%23filter1)' d='M 77.34375 10.890625 L 81.15625 12.5 L 84.453125 14.96875 L 87.03125 18.125 L 88.859375 21.921875 L 89.609375 25.140625 L 89.75 72.578125 L 88.828125 78.109375 L 86.078125 83.21875 L 81.84375 87.046875 L 77.359375 89.078125 L 73.03125 89.734375 L 27.390625 89.75 L 24.296875 89.46875 L 21.09375 88.5625 L 18.125 87.046875 L 15.53125 85.015625 L 13.40625 82.546875 L 11.765625 79.703125 L 10.671875 76.46875 L 10.25 72.65625 L 10.25 27.421875 L 11.15625 21.875 L 13.90625 16.765625 L 18.125 12.9375 L 21.078125 11.421875 L 23.46875 10.6875 L 26.9375 10.25 L 73.03125 10.25 Z'/%3E%3Cfilter id='filter2' x='0' y='0' width='100' height='100' filterUnits='userSpaceOnUse' primitiveUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeGaussianBlur stdDeviation='0.326347'/%3E%3C/filter%3E%3Cpath id='path1' fill='%23ffffff' fill-rule='evenodd' stroke='none' filter='url(%23filter2)' d='M 64.036942 21.978188 L 64.036942 15.817451 L 36.556816 15.817451 L 36.556816 21.978188 Z M 61.19976 65.670776 C 60.105419 69.278046 56.173897 71.507263 50.945377 71.507263 C 43.974018 71.507263 39.47506 66.724586 39.47506 59.266853 L 39.47506 57.280827 L 69.10334 57.280827 L 69.10334 52.49815 C 69.10334 39.933491 62.091446 32.313629 50.540066 32.313629 C 39.069748 32.313629 31.490421 39.974022 31.490421 51.606464 L 31.490421 58.334637 C 31.490421 70.899292 38.583374 78.194901 50.985909 78.194901 C 60.510731 78.194901 67.806343 73.087982 68.981743 65.670776 Z M 50.459003 38.960743 C 57.146645 38.960743 61.118698 43.702888 61.118698 51.565933 L 39.47506 51.565933 C 39.47506 43.662357 43.609238 38.960743 50.459003 38.960743 Z'/%3E%3C/svg%3E%0A" />
 </head>
 <body>
-<div class="grid">
+  
   <div class="hero">
     <img class="hero-image" src="assets/hero.webp" alt="Hero image" />
   </div>
+
   <div class="links">
     <a href="docs/intro.html">Docs</a>
     <a href="https://github.com/dsrw/enu/releases/latest">Download</a>
+    <p>Enu is for learning to code and making games.</p>
   </div>
-</div>
+  
+  <div class="videos">
+    <video autoplay muted loop>
+      <source src="assets/enu1.m4v" type="video/mp4" />
+    </video>  
+  </div>
+  <div class="info">
+    <p>Code with friends.</p>
+  </div>
+  <div class="videos">
+    <video autoplay muted loop>
+      <source src="assets/enu2.m4v" type="video/mp4" />
+    </video>  
+  </div>
+  <div class="info">
+    <p>Build with code, by hand, or both.</p>
+  </div>
+  <div class="videos">
+    <video autoplay muted loop>
+      <source src="assets/enu3.m4v" type="video/mp4" />
+    </video>  
+  </div>
+  <div class="info">
+    <p>100% free and open source.</p>
+  </div>
+  <div class="info2">
+    <p>
+      Enu is under the MIT license and is free forever to use however you like.
+    </p>
+    <p>
+      It's written in the <a href="https://nim-lang.org" target="_blank">Nim</a> 
+      programming language, and runs on the 
+      <a href="https://godotengine.org" target="_blank">Godot</a> game engine.
+    </p>
+    <p>
+      Join us on <a href="https://discord.gg/BWHUs4Wc" target="_blank">Discord</a>.
+      Contribute at <a href="https://github.com/dsrw/enu" target="_blank">Github</a>.
+    </p>
+  </div>
+  <div class="footer">
+    ©2023 Scott Wadden
+  </div>
 </body>
 </html>
