Play videos inline

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   
   <div class="videos">
-    <video autoplay muted loop>
+    <video autoplay muted loop playsinline preload>
       <source src="assets/enu1.m4v" type="video/mp4" />
     </video>  
   </div>
@@ -28,7 +28,7 @@
     <p>Code with friends.</p>
   </div>
   <div class="videos">
-    <video autoplay muted loop>
+    <video autoplay muted loop playsinline preload>
       <source src="assets/enu2.m4v" type="video/mp4" />
     </video>  
   </div>
@@ -36,7 +36,7 @@
     <p>Build with code, by hand, or both.</p>
   </div>
   <div class="videos">
-    <video autoplay muted loop>
+    <video autoplay muted loop playsinline preload>
       <source src="assets/enu3.m4v" type="video/mp4" />
     </video>  
   </div>
