--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
   
   <div class="hero">
-    <img class="hero-image" src="assets/hero.webp" alt="Hero image" />
+    <img class="hero-image" 
+      srcset="assets/hero_mobile.webp 1512w, assets/hero.webp 2874w"
+      sizes="(max-width: 800px) 480px, 800px"
+      alt="Enu hero image" />
   </div>
 
   <div class="links">
