--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <div class="links">
     <a href="docs/intro.html">Docs</a>
     <a href="https://github.com/dsrw/enu/releases/latest">Download</a>
-    <p>Enu is for learning to code and making games.</p>
+  </div>
+  <div class="info">
+    <h2>Enu is for learning to code and making games.</h2>
   </div>
   
   <div class="videos">
@@ -28,7 +30,7 @@
     </video>  
   </div>
   <div class="info">
-    <p>Code with friends.</p>
+    <h2>Code with friends.</h2>
   </div>
   <div class="videos">
     <video autoplay muted loop playsinline preload>
@@ -36,7 +38,7 @@
     </video>  
   </div>
   <div class="info">
-    <p>Build with code, by hand, or both.</p>
+    <h2>Build with code, by hand, or both.</h2>
   </div>
   <div class="videos">
     <video autoplay muted loop playsinline preload>
@@ -44,9 +46,7 @@
     </video>  
   </div>
   <div class="info">
-    <p>100% free and open source.</p>
-  </div>
-  <div class="info2">
+    <h2>100% free and open source.</h2>
     <p>
       Enu is under the MIT license and is free forever to use however you like.
     </p>
