--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0, initial-scale=1.0">
+  <link rel="icon" href="./docs/assets/favicon.png" />
   <title>Enu</title>
   <link rel="stylesheet" href="assets/enu.css" />
-  <link rel="icon" href="docs/assets/favicon.png" />
 </head>
 <body>
   
