--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0, initial-scale=1.0">
-  <link rel="icon" href="./docs/assets/favicon.png" />
+  <link rel="icon" href="/favicon.png" />
   <title>Enu</title>
   <link rel="stylesheet" href="assets/enu.css" />
 </head>
