--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <div class="info">
-    <h2>Build with code, by hand, or both.</h2>
+    <h2>Build using code, by hand, or both.</h2>
   </div>
 
   <div class="videos">
