--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#333333">
   <meta name="msapplication-TileColor" content="#603cba">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#333333">
 
   <title>Enu</title>
   <link rel="stylesheet" href="assets/enu.css" />
