--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </p>
     <p>
       It uses the <a href="https://nim-lang.org" target="_blank">Nim</a> 
-      programming language, and runs on the 
+      programming language and runs on the 
       <a href="https://godotengine.org" target="_blank">Godot</a> game engine.
     </p>
     <p>
