--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="info">
     <h2>100% free and open source.</h2>
     <p>
-      Enu is MIT licensed and is free forever, to use however you like.
+      Enu is MIT licensed and free forever, to use however you like.
     </p>
     <p>
       It uses the <a href="https://nim-lang.org" target="_blank">Nim</a> 
