--- a/index.html
+++ b/index.html
@@ -61,6 +61,26 @@
   </div>
 
   <div class="info">
+    <h2>Control complex behavior with nested state machines.</h2>
+  </div>
+
+  <div class="videos">
+    <video autoplay muted loop playsinline preload>
+      <source src="assets/enu4-1080.mp4" type="video/mp4" />
+    </video>  
+  </div>
+
+  <div class="info">
+    <h2>Shorthand commands for new typists.</h2>
+  </div>
+
+  <div class="videos">
+    <video autoplay muted loop playsinline preload>
+      <source src="assets/enu5-1080.mp4" type="video/mp4" />
+    </video>  
+  </div>
+
+  <div class="info">
     <h2>100% free and open source.</h2>
     <p>
       Enu is MIT licensed and free forever, to use however you like.
