Added youtube link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
       <a href="https://godotengine.org" target="_blank">Godot</a> game engine.
     </p>
     <p>
-      Join us on <a href="https://discord.gg/BWHUs4Wc" target="_blank">Discord</a>.
+      Check out our <a href="https://www.youtube.com/@enu3d">Youtube channel</a>
+      or join us on <a href="https://discord.gg/BWHUs4Wc" target="_blank">Discord</a>.
       Contribute at <a href="https://github.com/dsrw/enu" target="_blank">Github</a>.
     </p>
   </div>
