--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
   </div>
 
   <div class="info">
-    <h2>Control complex behavior with nested state machines.</h2>
+    <h2>Simplify complex behavior with
+      <a href="https://ē.nu/docs/command_loops.html">Command Loops</a>.</h2>
   </div>
 
   <div class="videos">
