--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   </div>
   
   <div class="videos">
-    <video autoplay muted loop playsinline preload>
+    <video autoplay muted loop playsinline>
+      <source src="assets/enu1-1080.webm" type="video/webm" />
       <source src="assets/enu1-1080.mp4" type="video/mp4" />
     </video>  
   </div>
@@ -45,7 +46,8 @@
   </div>
 
   <div class="videos">
-    <video autoplay muted loop playsinline preload>
+    <video autoplay muted loop playsinline>
+      <source src="assets/enu2-1080.webm" type="video/webm" />
       <source src="assets/enu2-1080.mp4" type="video/mp4" />
     </video>  
   </div>
@@ -55,7 +57,8 @@
   </div>
 
   <div class="videos">
-    <video autoplay muted loop playsinline preload>
+    <video autoplay muted loop playsinline>
+      <source src="assets/enu3-1080.webm" type="video/webm" />
       <source src="assets/enu3-1080.mp4" type="video/mp4" />
     </video>  
   </div>
@@ -66,7 +69,8 @@
   </div>
 
   <div class="videos">
-    <video autoplay muted loop playsinline preload>
+    <video autoplay muted loop playsinline>
+      <source src="assets/enu4-1080.webm" type="video/webm" />
       <source src="assets/enu4-1080.mp4" type="video/mp4" />
     </video>  
   </div>
@@ -76,7 +80,8 @@
   </div>
 
   <div class="videos">
-    <video autoplay muted loop playsinline preload>
+    <video autoplay muted loop playsinline>
+      <source src="assets/enu5-1080.webm" type="video/webm" />
       <source src="assets/enu5-1080.mp4" type="video/mp4" />
     </video>  
   </div>
