--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   
   <div class="videos">
-    <video autoplay muted loop playsinline>
+    <video autoplay muted loop playsinline poster="assets/spinner.gif">
       <source src="assets/enu1-1080.webm" type="video/webm" />
       <source src="assets/enu1-1080.mp4" type="video/mp4" />
     </video>  
@@ -46,7 +46,7 @@
   </div>
 
   <div class="videos">
-    <video autoplay muted loop playsinline>
+    <video autoplay muted loop playsinline poster="assets/spinner.gif">
       <source src="assets/enu2-1080.webm" type="video/webm" />
       <source src="assets/enu2-1080.mp4" type="video/mp4" />
     </video>  
@@ -57,7 +57,7 @@
   </div>
 
   <div class="videos">
-    <video autoplay muted loop playsinline>
+    <video autoplay muted loop playsinline poster="assets/spinner.gif">
       <source src="assets/enu3-1080.webm" type="video/webm" />
       <source src="assets/enu3-1080.mp4" type="video/mp4" />
     </video>  
@@ -69,7 +69,7 @@
   </div>
 
   <div class="videos">
-    <video autoplay muted loop playsinline>
+    <video autoplay muted loop playsinline poster="assets/spinner.gif">
       <source src="assets/enu4-1080.webm" type="video/webm" />
       <source src="assets/enu4-1080.mp4" type="video/mp4" />
     </video>  
@@ -80,7 +80,7 @@
   </div>
 
   <div class="videos">
-    <video autoplay muted loop playsinline>
+    <video autoplay muted loop playsinline poster="assets/spinner.gif">
       <source src="assets/enu5-1080.webm" type="video/webm" />
       <source src="assets/enu5-1080.mp4" type="video/mp4" />
     </video>  
