Update discord link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </p>
     <p>
       Check out our <a href="https://www.youtube.com/@enu3d">Youtube channel</a>
-      or join us on <a href="https://discord.gg/5wXvdfTK" target="_blank">Discord</a>.
+      or join us on <a href="https://discord.gg/KTjhgtKgQS" target="_blank">Discord</a>.
       Contribute at <a href="https://github.com/dsrw/enu" target="_blank">Github</a>.
     </p>
   </div>
